overflow problem solved

--- a/sass/_default.scss
+++ b/sass/_default.scss
@@ -9,7 +9,7 @@
 html{
     font-size: 62.5%;
     max-width: 100vw;
-    // overflow-x: hidden;
+    overflow-x: hidden !important;
     // background-color: var(--color-secondary);
 }
 
